时间：4月9日 使用pagehelper完成了信息查询的分页功能 后端步骤： 1、spring boot引入pagehelper依赖 2、修改mybatis配置文件 3、使用pagehelper完成分页的代码 前端步骤： 1、使用VueX，将用户输入的数据存储在仓库中，作为每次分页查询的参数 2、在详情页的mounted钩子函数中执行初始的ajax请求，保证第一页数据的呈现 3、创建el-pagination的current-change事件，当页码变更时再发送ajax请求，获取相应页数的数据

--- a/my_Court_Query_System/src/main/resources/application.properties
+++ b/my_Court_Query_System/src/main/resources/application.properties
@@ -3,4 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=shutiaobendan11
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=com.example.mybatis.entity
+#pagehelper\u5206\u9875\u63d2\u4ef6\u914d\u7f6e
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
 server.port=8081
+mybatis.config-location=classpath:mybatis-config.xml
