--- a/my_Court_Query_System/src/main/resources/application.properties
+++ b/my_Court_Query_System/src/main/resources/application.properties
@@ -10,3 +10,4 @@ pagehelper.support-methods-arguments=true
 pagehelper.params=count=countSql
 server.port=8081
 mybatis.config-location=classpath:mybatis-config.xml
+debug=true
